fix: alter org for sonar

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
 sonar.projectKey=reaandrew_ee-ai-rag-mcp-demo
-sonar.organization=reaandrew
+sonar.organization=reaandrew-1
 
 # Source configuration
 sonar.sources=.
