--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -27,3 +27,16 @@ sonar.qualitygate.timeout=300
 
 # Security settings
 sonar.security.hotspots.mustBeReviewed=true
+
+# Only fail on critical and high severity issues
+sonar.qualitygate.ignore=INFO,MINOR
+
+sonar.issue.ignore.multicriteria=e1,e2
+
+# Disable rule 1 (e.g., S6249 - insecure HTTP to S3 buckets)
+sonar.issue.ignore.multicriteria.e1.ruleKey=terraform:S6249
+sonar.issue.ignore.multicriteria.e1.resourceKey=**/*.tf
+
+# Disable rule 2 (e.g., S6352 - incomplete logging)
+sonar.issue.ignore.multicriteria.e2.ruleKey=terraform:S6352
+sonar.issue.ignore.multicriteria.e2.resourceKey=**/*.tf
