fix: try and remove the ignore from the file

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -33,10 +33,10 @@ sonar.qualitygate.ignore=INFO,MINOR
 
 sonar.issue.ignore.multicriteria=e1,e2
 
-# Disable rule 1 (e.g., S6249 - insecure HTTP to S3 buckets)
-sonar.issue.ignore.multicriteria.e1.ruleKey=terraform:S6249
-sonar.issue.ignore.multicriteria.e1.resourceKey=**/*.tf
-
-# Disable rule 2 (e.g., S6352 - incomplete logging)
-sonar.issue.ignore.multicriteria.e2.ruleKey=terraform:S6258
-sonar.issue.ignore.multicriteria.e2.resourceKey=**/*.tf
+## Disable rule 1 (e.g., S6249 - insecure HTTP to S3 buckets)
+#sonar.issue.ignore.multicriteria.e1.ruleKey=terraform:S6249
+#sonar.issue.ignore.multicriteria.e1.resourceKey=**/*.tf
+#
+## Disable rule 2 (e.g., S6352 - incomplete logging)
+#sonar.issue.ignore.multicriteria.e2.ruleKey=terraform:S6258
+#sonar.issue.ignore.multicriteria.e2.resourceKey=**/*.tf
