fix: add 1-minute timeout to tests and enhance pre-commit hooks

--- a/pytest.ini
+++ b/pytest.ini
@@ -3,4 +3,4 @@ testpaths = tests
 python_files = test_*.py
 python_functions = test_*
 python_classes = Test*
-addopts = --cov=src --cov-report=xml:coverage-reports/python-coverage.xml --cov-report=term
+addopts = --cov=src --cov-report=xml:coverage-reports/python-coverage.xml --cov-report=term --timeout=60
