--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -99,7 +99,7 @@ jobs:
           # Terraform variables
           echo "TF_VAR_environment=prod" >> $GITHUB_ENV
           echo "TF_VAR_app_version=${RELEASE_VERSION}" >> $GITHUB_ENV
-          echo "TF_VAR_raw_pdfs_bucket_name=ee-ai-rag-mcp-demo-raw-pdfs-${RELEASE_VERSION}" >> $GITHUB_ENV
+          echo "TF_VAR_raw_pdfs_bucket_name=ee-ai-rag-mcp-demo-raw-pdfs" >> $GITHUB_ENV  # Remove version from bucket name
           
           # For debugging
           echo "Setting up Terraform for version: ${RELEASE_VERSION}"
